# itext2kg

./: .gitignore  AD2KG-1.py  AD2KG-prot.py  AD2KG.py  CHANGELOG.md  De2KG-1.py  PROJECT_SUMMARY.md  QA_test.ipynb  README.md  README_itext2kg.md  WORK_COMPLETION_SUMMARY.md  abstract2KG.ipynb  abstract_distiller.py  creect_abstract.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: publish_on_pypi.yml  testing_matcher.yml
atom/: __init__.py  atom.py  logging_config.py
atom/documents_distiller/: documents_distiller.py
atom/graph_integration/: neo4j_storage.py  storage_interface.py
atom/graph_matching/: matcher.py  matcher_interface.py
atom/itext2kg/: __init__.py  itext2kg.py  itext2kg_star.py
atom/itext2kg/graph_matching/: matcher.py  matcher_interface.py
atom/itext2kg/ientities_extraction/: ientities_extractor.py
atom/itext2kg/irelations_extraction/: irelations_extractor.py  simple_direct_irelations_extractor.py
atom/itext2kg/models/: schemas.py
atom/llm_output_parsing/: langchain_output_parser.py
atom/models/: knowledge_graph.py  relationship.py
datasets/atom/nyt_news/: 2020_nyt_COVID_Enriched_Factoids.xlsx  2020_nyt_COVID_last_version_ready.pkl  2020_nyt_COVID_raw.parquet  subset_2020_nyt_COVID_exhaustivity.pkl  ~$2020_nyt_COVID_grouped_by_dates_quintuples.xlsx
datasets/cvs/: Emily_Davis.docx  Jane_Smith.docx  John_Doe.docx  Michael_Brown.docx  Michael_Brown.txt  Robert_Johnson.docx
datasets/itext2kg/curated/: grouped_cs.xlsx  grouped_music.xlsx
datasets/itext2kg/cvs/: Emily_Davis.txt  Jane_Smith.txt  John_Doe.txt  Robert_Johnson.txt
datasets/itext2kg/scientific_articles/: bertology.txt  pollmgraph.txt  seasonal.txt
datasets/itext2kg/similar_entities/: HR_CV_Concept_Variations.xlsx  News_Concept_Variations.xlsx  Scientific_Concept_Variations.xlsx
datasets/itext2kg/similar_relations/: Relationship_Variations.xlsx
datasets/scientific_articles/: FIRST_SENT.pkl  bertology.docx  bioclip.docx  bioclip.txt  building_age.docx  building_age.txt  pollmgraph.docx  seasonal.docx
docs/: PROJECT_STATUS.md
docs/reviewer_response/: DELIVERABLES_CHECKLIST.md  REVIEWER_MATERIALS_README.md  REVIEWER_RESPONSE_EXECUTIVE_SUMMARY.md  REVIEWER_RESPONSE_SCALABILITY.md  benchmark_demo.py  scalability_demo.py  scalability_demo_simple.py  审稿人回答总结.md  工作完成总结.md
evaluation/costs/: cost_estimation.py
evaluation/exhaustivity/: factoids_extraction_nyt.py  plot_combined_exhaustivity.py  plot_exhaustivity_factoids.py  plot_exhaustivity_quintuples.py  quintuples_extraction_nyt.py  quintuples_extraction_nyt_from_factoids.py
evaluation/latency/: plot_latency_comparison.py  test_graphiti.py  testing_atom.py  testing_itext2kg.py
evaluation/merge/: evaluate_atom_merge.py  evaluate_graphiti_merge.py  evaluate_itext2kg_merge.py
evaluation/quintuples_quality/: calculate_quintuples_quality.py
evaluation/stability/: calculate_stability.py  calculate_stability_jaccard.py
examples/: building_dynamic_kg_openai_posts.ipynb  different_llm_models.ipynb  different_llm_models_scientific_articles.ipynb  evaluation_computer_music_dataset.ipynb  examples_of_use.ipynb  quickstart_falkordb.ipynb
examples/notebooks/: README.md
itext2kg/: __init__.py  itext2kg.py  itext2kg_star.py
itext2kg/atom/: __init__.py  atom.py
itext2kg/atom/graph_matching/: __init__.py  matcher.py  matcher_interface.py
itext2kg/atom/models/: __init__.py  entity.py  knowledge_graph.py  prompts.py  relationship.py  schemas.py
itext2kg/documents_distiller/: __init__.py  documents_distiller.py  documents_distiller_interface.py
itext2kg/graph_integration/: __init__.py  falkordb_storage.py  graph_integrator.py  itext2kg.py  neo4j_storage.py  storage_interface.py
itext2kg/graph_matching/: matcher.py  matcher_interface.py
itext2kg/ientities_extraction/: __init__.py  ientities_extraction.py  ientities_extractor.py
itext2kg/irelation_extraction/: irelations_extractor.py
itext2kg/irelations_extraction/: __init__.py  irelations_extractor.py  simple_direct_irelations_extractor.py
itext2kg/itext2kg_star/: __init__.py  itext2kg.py  itext2kg_star.py
itext2kg/itext2kg_star/graph_matching/: __init__.py  matcher.py  matcher_interface.py
itext2kg/itext2kg_star/ientities_extraction/: ientities_extractor.py
itext2kg/itext2kg_star/irelations_extraction/: irelations_extractor.py  simple_direct_irelations_extractor.py
itext2kg/itext2kg_star/models/: __init__.py  knowledge_graph.py
itext2kg/llm_output_parser/: __init__.py  llm_output_parser.py
itext2kg/llm_output_parsing/: __init__.py  langchain_output_parser.py  llm_output_parser_interface.py
itext2kg/models/: __init__.py  knowledge_graph.py  schemas.py
itext2kg/utils/: __init__.py  data_handling.py  llm_output_parser.py  llm_output_parser_interface.py  matcher.py  process.py  processing.py  schemas.py
tests/: __init__.py  current_entities.pkl  current_entities_.pkl  examples_of_entities_and_relations.pkl  global_entities.pkl  global_entities_.pkl  test_itext2kg.py  test_matcher.py  testing_matcher.py
tests/atom/: test_atom_matching.py
tests/itext2kg/: test_itext2kg_matching.py
