[metadata]
name = itext2kg
version = 0.0.1
author = Auvalab - Yassir LAIRGI
author_email = <yassir.lairgi@auvalie.com>
description = Incremental Knowledge Graphs Constructor Using Large Language Models
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kg construction, llms, neo4j, graphs
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    langchain==0.1.10
    langchain_core==0.1.28
    langchain_openai==0.0.8
    neo4j==5.12.0
    numpy==1.24.4
    openai
    openpyxl
    pandas==2.0.3
    pydantic_settings == 2.2.1
    scikit_learn==1.3.2
    pypdf==4.2.0
    pytest==8.2.2

[options.package_data]
example = *.txt, * = README.md