[metadata]
name = itext2kg
version = 0.0.4
author = Auvalab - Yassir LAIRGI
author_email = <yassir.lairgi@auvalie.com>
description = Incremental Knowledge Graphs Constructor Using Large Language Models
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kg construction, llms, neo4j, graphs
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    langchain==0.3.0
    langchain-core==0.3.0
    langchain-openai==0.2.0
    neo4j==5.24.0
    numpy 
    openai==1.45.0
    openpyxl==3.1.5
    pydantic-settings==2.5.2
    scikit-learn==1.5.2
    pypdf==4.3.1
    pytest==8.2.2

[options.package_data]
example = *.txt, * = README.md