[metadata]
name = itext2kg
version = 1.0.0
author = Auvalab - Yassir LAIRGI
author_email = <yassir.lairgi@auvalie.com>
description = AdapTive and OptiMized Dynamic Temporal Knowledge Graph Construction Using LLMs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kg construction, llms, temporal dynamic knowledge graphs,
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.10
install_requires =
    langchain>=0.3.26,<0.4.0
    langchain-core>=0.3.69,<0.4.0
    langchain-openai>=0.2.0,<0.3.0
    neo4j>=5.28.0,<6.0.0
    openai>=1.97.0,<2.0.0
    numpy>=1.24.0,<2.0.0
    scikit-learn>=1.7.0,<2.0.0
    openpyxl>=3.1.0,<4.0.0
    pypdf>=4.3.0,<5.0.0
    tiktoken>=0.8.0,<1.0.0
    python-dateutil>=2.8.0,<3.0.0
    pydantic>=2.11.0,<3.0.0
    pydantic-settings>=2.6.0,<3.0.0

[options.package_data]
example = *.txt, * = README.md
